[package]
name = "r2"
version = "0.1.0"
edition = "2021"
authors = ["Alvaro J. Gaona <alvgaona@gmail.com>"]
description = "The Cloudflare R2 CLI tool"
license = "MIT"

[dependencies]
tokio = { version = "1.41.0", features = ["macros", "rt-multi-thread"] }
aws-config = "1.5.8"
aws-sdk-s3 = "1.57.0"
clap = { version = "4.4", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.8.19"
